# super-resolution

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.md  app.Dockerfile  docker-compose.yml  get_dataset.sh  main.Dockerfile  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
.streamlit/: config.toml
api/app/: main.py  super_resolve.py
api/app/.streamlit/: config.toml
configs/SRGAN/: srgan_predict_config.yml  srgan_test_config.yml  srgan_train_config.yml
configs/SRRESNET/: srresnet_predict_config.yml  srresnet_test_config.yml  srresnet_train_config.yml
docs/: conf.py
src/super_resolution/: __init__.py  main.py  super_resolution_data.py  utils.py
src/super_resolution/models/: model_enum.py  super_resolution_model_base.py  utils_models.py
src/super_resolution/models/SRGAN/: __init__.py  discriminator.py  generator.py  model.py  utils_loss.py  utils_model.py
src/super_resolution/models/SRResNet/: __init__.py  model.py
tests/: __init__.py  test_main.py
